# poker-fr-tournaments

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  fly.toml  package-lock.json  pyproject.toml
api/: Dockerfile  __init__.py  crud.py  deps.py  main.py  models.py  requirements.txt  schemas.py
api/tests/: test_api.py
docs/: DEPLOY.md  README.md  ROADMAP.md  RUNBOOK.md
handover/: ACCESS.md  CHECKLIST.md  COSTS.md  INVENTORY.md  ROLLBACK.md  RUNBOOK.md  SECRETS.md
infra/: docker-compose.yml
infra/github/workflows/: deploy.yml  ingest.yml  test.yml
ingestion/: __init__.py  csv_ingestor.py  html_ingestor.py  ics_ingestor.py  rss_ingestor.py  run_all.py
ingestion/sources/: catalog.yml
ingestion/tests/: test_html.py  test_rss.py
ingestion/tests/fixtures/: demo_html.html  demo_rss.xml
monitoring/: anomaly_detection.py  data_freshness.py  endpoint_checks.py  monitor.yml
normalize/: __init__.py  geocode.py  normalizer.py  utils.py
normalize/tests/: test_normalizer.py  test_utils.py
schema/: README.md  schema.sql  seed.py
scripts/: bootstrap_local.sh  bootstrap_prod.sh
web/: next.config.js  package.json  tsconfig.json
web/.next/: app-build-manifest.json  trace
web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  (+1 more)
web/app/: globals.css  layout.tsx  page.tsx
web/app/a-propos/: page.tsx
web/app/map/: page.tsx
web/app/mentions-legales/: page.tsx
web/app/politique-confidentialite/: page.tsx
web/tests/e2e/: example.spec.ts
(+56 files in other folders)
